--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
     background-color: #ffff005d;
 }
 
-/* Images Settings */
+/* Images importation from unsplash and Settings */
 
 .image_1 {
     background-image: url(https://images.unsplash.com/photo-1604106701789-98a5aa51bc2c?q=80&w=1911&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
@@ -111,6 +111,8 @@
 .meal_menu_left ul li {
     text-align: center;
 }
+
+/* Footer Settings and styling */
 
 .contact_back_top {
     display: flex;
